<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="btn_register_text">还没有账号？马上去注册</string>
    <string name="btn_login_text">登   录</string>
    <string name="et_pass_text">密码</string>
    <string name="et_user_text">用户名</string>
    <string name="SelectCity_text">选择城市</string>
    <string name="hint_words">输入全国城市（汉字、拼音）</string>
    <string name="add_city">添加城市</string>
    <string name="remember_password">记住密码</string>
    <string name="login_auto">自动登录</string>

</resources>
