<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg">

    <ImageView
        android:id="@+id/login_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/splash_logo_login" />

    <RelativeLayout
        android:id="@+id/rl_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_picture">

        <LinearLayout
            android:id="@+id/ll_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/lbs_popup_bg"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_user"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="@drawable/login_et_bg"
                android:drawableLeft="@drawable/icon_name"
                android:drawablePadding="6dp"
                android:hint="@string/et_user_text"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="#000"
                android:textColorHint="#ccc" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#CBCED2" />

            <EditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="@drawable/login_et_bg"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="6dp"
                android:hint="@string/et_pass_text"
                android:inputType="textPassword"
                android:padding="5dp"
                android:paddingTop="3dp"
                android:textColor="#000"
                android:textColorHint="#ccc" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkbox_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_user_info"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <CheckBox
                android:id="@+id/login_remember_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_password">

            </CheckBox>

            <CheckBox
                android:id="@+id/login_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_auto">

            </CheckBox>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/checkbox_login"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_login"
            android:text="@string/btn_login_text"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/btn_login"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_reg"
            android:text="@string/btn_register_text"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>


</RelativeLayout>
